# lightdm-matrix-greeter

./: Makefile  Makefile.in  README  config.h  config.status  configure  configure.ac  makefile.old
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
data/: Makefile  Makefile.am  Makefile.in  lightdm-matrix-greeter.conf  lightdm-matrix-greeter.desktop
src/: Makefile  Makefile.am  Makefile.in  lightdm-matrix-greeter  lightdm-matrix-greeter-css.h  lightdm-matrix-greeter-ui.h  matrix_greeter.c  matrix_lightdm_greeter.css  matrix_lightdm_greeter.ui
src/.deps/: lightdm_matrix_greeter-matrix_greeter.Po
